<resources>
    <string name="app_name">MedicalRecordTrackingSystem</string>
    <string name="select_hospital">Select Hospital</string>
    <string name="ok_button">OK</string>
    <string name="api_error_message">Unable to load</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="or">----Or----</string>
    <string name="proceed">Proceed</string>
    <string name="book_hassle_free_appointment">Book hassle-free Appointments</string>
    <string name="select_department">Select Department</string>
    <string name="select_one">--Select one--</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="cannot_sign_in_user">Unable to Sign in</string>
    <string name="shared_pref_key">SharedPreference User</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user_id">User id</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="action_search">Search</string>
    <string name="book_now">Book Now</string>
    <string name="years_of_exp">Exp:</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="appointments">Appointments</string>
    <string-array name="time_slot_array">
        <item>9:00 - 9:20</item>
        <item>9:20 - 9:40</item>
        <item>9:40 - 10:00</item>
        <item>10:00 - 10:20</item>
        <item>10:20 - 10:40</item>
        <item>10:40 - 11:00</item>
        <item>11:00 - 11:20</item>
        <item>11:20 - 11:40</item>
        <item>11:40 - 12:00</item>
    </string-array>
</resources>
